# spiremind

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tier_list.json
configs/: dataset_info.json  llm_dataset.json
docs/: DB_SETUP.md  LLM_TRAINING.md  models-and-training.md
scripts/: enrich_db.py  prepare_llm_dataset.py  train_rl.py
scripts/llm/: test_gpu.py  test_inference.py  train_spire.py
src/: config.py  json_logger.py  main.py
src/agents/: heuristics.py  lora_agent.py  ollama_agent.py  rl_agent.py
src/core/: communication.py  orchestrator.py  session.py
src/gui/: dashboard.py
src/models/: state.py
src/rl/: __init__.py  actions.py  features.py
src/rl/envs/: __init__.py  spire_env.py
src/rl/mock/: __init__.py  sim_game.py
src/utils/: command_policy.py  config_loader.py  logger.py  prompt.py  rag.py  reward_logger.py  reward_tracker.py  rl_online_trainer.py  training_logger.py
tests/: test_heuristics.py  test_prompt.py
